Fix extra comma in author list

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -35,7 +35,7 @@ papers:
     link: 'https://ieeexplore.ieee.org/abstract/document/9401967'
 
   - type: journal
-    authors: 'Newman, C.D., Decker, M.J., AlSuhaibani, R.S.,, Peruma, A., Mkaouer, M.W., Mohapatra, S., Vishoi, T., Zampieri, M., and Hill, E.'
+    authors: 'Newman, C.D., Decker, M.J., AlSuhaibani, R.S., Peruma, A., Mkaouer, M.W., Mohapatra, S., Vishoi, T., Zampieri, M., and Hill, E.'
     title: 'An Ensemble Approach for Annotating Source Code Identifiers with Part-of-speech Tags'
     journal: 'Transactions on Software Engineering'
     date: 'July, 2021'
