Add output of award on pubs

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -203,3 +203,4 @@ papers:
     date: 'September 25-26 2011'
     pages: 12
     link: 'http://ieeexplore.ieee.org/document/6065176/'
+    award: 'Most Influential Paper Award'
