--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -1,6 +1,25 @@
 semesters:
-  - semester: "Spring 2022"
+  - semester: "Fall 2022"
     current: true
+    start_date: "2022-01-20"
+    end_date: "2022-04-22"
+    classes: 
+      - number: "CS 4/5050"
+        title: "Research Methods in Computer Science"
+        time: "19:30 - 20:45"
+        days: "M W  "
+        building: "Hayes"
+        room: "117"
+
+      - number: "SE 4/5550"
+        title: "Software Architecture & Design"
+        time: "16:00 - 17:15"
+        days: " T R "
+        building: "Central"
+        room: "1011"
+
+  - semester: "Spring 2022"
+    current: false
     start_date: "2022-01-20"
     end_date: "2022-04-22"
     classes: 
