--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@
 title: 'Michael J. Decker, Ph.D.'
 classtitle: 'Dr. Michael J. Decker'
 email: 'mdecke@bgsu.edu'
+affiliation: 'Department of Computer Science, Bowling Green State University'
 office_building: 'Hayes Hall'
 office_room: '242'
 url: 'mjdecker.github.io'
