--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -43,10 +43,11 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
-        run: find _notes -type d | sed "s/_notes/_texts/" | xargs -I% mkdir -p %
-        run: find _notes -name "*.md" | sed "s/^_notes//" | sed "s/.md$//" | xargs -I% cp "_notes%.md" "_texts%.txt"
-        # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: |
+          find _notes -type d | sed "s/_notes/_texts/" | xargs -I% mkdir -p %
+          find _notes -name "*.md" | sed "s/^_notes//" | sed "s/.md$//" | xargs -I% cp "_notes%.md" "_texts%.txt"
+          # Outputs to the './_site' directory by default
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
