--- a/_layouts/syllabus.yml
+++ b/_layouts/syllabus.yml
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="/css/byword.css">
+    <link rel="stylesheet" href="/css/theme.css">
   </head>
 
   <body>
